<resources>
    <string name="app_name">HGMerchant</string>
    <string name="home">Home</string>
    <string name="transactions">Transaction List</string>
    <string name="profile">Profile</string>
    <string name="scan">Scan QR Code</string>
    <string name="add_reward">Add Reward Item</string>
    <string name="add_promo">Add Promo Item</string>
    <string name="product_template">Product: %1$s</string>
    <string name="disc_price_template">Discounted Price: ₱%1$s</string>
    <string name="discount_template">Discount: %1$s%%</string>
    <string name="points_req_template">Points Required: %1$s</string>
    <string name="date_start_template">Starts on: %1$s</string>
    <string name="date_end_template">Ends on: %1$s</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="edit_accepted_recyclable_materials">Edit Accepted Recyclable Materials</string>
    <string name="email_store_gmail_com">Email: store@gmail.com</string>
    <string name="phone_63900_000_0000">Phone: +63900-000-0000</string>
    <string name="id_jnefoehr983kjbsdf9n2i2ov9">ID: jnefoehr983kjbsdf9n2i2ov9</string>
    <string name="shop_name">Shop name</string>
    <string name="address_banilad_cebu_city">Address: Banilad Cebu City</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="send">Send</string>
    <string name="back_to_login">back to login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_an_account">Submit A Request to Open an Account</string>
    <string name="store_name">Store Name</string>
    <string name="address">Address</string>
    <string name="address_placeholder">Address: %1$s</string>
    <string name="owner">Owner</string>
    <string name="select_an_image">Select an image</string>
    <string name="upload_valid_id">Upload Valid ID</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="barangay">Barangay</string>
    <string name="sitio">Sitio</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="submit">Submit</string>
    <string name="upload_front">Upload Front</string>
    <string name="upload_front_of_id">Upload Front of ID</string>
    <string name="select_photo">Select Photo</string>
    <string name="by_clicking_submit_you_agree_to_out_terms_and_conditions_and_privacy_policy">By clicking submit, you agree to our Terms and Conditions and Privacy Policy</string>
    <string name="upload_back_of_id">Upload Back of ID</string>
    <string name="upload_a_valid_id">Upload A Valid ID</string>
    <string name="nwelcome_to_hygieia_a_point_based_reward_system_application_by_using_hygieia_you_agree_to_abide_by_the_following_terms_and_conditions">\nWelcome to Hygieia, a point-based reward system application. By using Hygieia, you agree to abide by the following terms and conditions:</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="n4_point_system_hygieia_operates_a_point_based_reward_system_points_are_awarded_based_on_user_activities_within_the_application_hygieia_reserves_the_right_to_modify_suspend_or_terminate_the_point_system_at_any_time_without_prior_notice">\n4. Point System: Hygieia operates a point-based reward system. Points are awarded based on user activities within the application. Hygieia reserves the right to modify, suspend, or terminate the point system at any time without prior notice.</string>
    <string name="n3_account_registration_to_access_certain_features_of_hygieia_you_may_be_required_to_register_for_an_account_you_are_responsible_for_maintaining_the_confidentiality_of_your_account_and_password_and_for_restricting_access_to_your_device_you_agree_to_accept_responsibility_for_all_activities_that_occur_under_your_account_or_password">\n3. Account Registration: To access certain features of Hygieia, you may be required to register for an account. You are responsible for maintaining the confidentiality of your account and password and for restricting access to your device. You agree to accept responsibility for all activities that occur under your account or password.</string>
    <string name="n2_use_license_permission_is_granted_to_download_one_copy_of_the_hygieia_application_on_a_single_device_for_personal_non_commercial_use_only_this_is_the_grant_of_a_license_not_a_transfer_of_title">\n2. Use License: Permission is granted to download one copy of the Hygieia application on a single device for personal, non-commercial use only. This is the grant of a license, not a transfer of title.</string>
    <string name="n1_acceptance_of_terms_by_accessing_or_using_the_hygieia_application_you_agree_to_be_bound_by_these_terms_and_conditions_our_privacy_policy_and_all_applicable_laws_and_regulations_if_you_do_not_agree_with_any_of_these_terms_you_are_prohibited_from_using_or_accessing_this_application">\n1. Acceptance of Terms: By accessing or using the Hygieia application, you agree to be bound by these Terms and Conditions, our Privacy Policy, and all applicable laws and regulations. If you do not agree with any of these terms, you are prohibited from using or accessing this application.</string>
    <string name="n5_prohibited_activities_you_agree_not_to_engage_in_any_of_the_following_prohibited_activities_n_violating_any_applicable_laws_or_regulations_n_impersonating_any_person_or_entity_or_falsely_stating_or_otherwise_misrepresenting_your_affiliation_with_a_person_or_entity_n_interfering_with_or_disrupting_the_operation_of_hygieia_or_servers_or_networks_connected_to_hygieia">\n5. Prohibited Activities: You agree not to engage in any of the following prohibited activities: \n- Violating any applicable laws or regulations. \n- Impersonating any person or entity or falsely stating or otherwise misrepresenting your affiliation with a person or entity. \n- Interfering with or disrupting the operation of Hygieia or servers or networks connected to Hygieia.</string>
    <string name="n6_disclaimer_hygieia_is_provided_on_an_as_is_and_as_available_basis_with_all_faults_and_without_warranty_of_any_kind_we_make_no_warranties_express_or_implied_regarding_the_accuracy_adequacy_timeliness_completeness_reliability_or_usefulness_of_any_information_provided_by_hygieia">\n6. Disclaimer: Hygieia is provided on an as isand as availablebasis, with all faults and without warranty of any kind. We make no warranties, express or implied, regarding the accuracy, adequacy, timeliness, completeness, reliability, or usefulness of any information provided by Hygieia.</string>
    <string name="n8_modifications_hygieia_may_revise_these_terms_of_service_for_its_application_at_any_time_without_notice_by_using_hygieia_you_are_agreeing_to_be_bound_by_the_then_current_version_of_these_terms_and_conditions_linearlayout_scrollview"><![CDATA[\n8. Modifications: Hygieia may revise these terms of service for its application at any time without notice. By using Hygieia, you are agreeing to be bound by the then-current version of these Terms and Conditions.]]></string>
    <string name="n7_limitations_in_no_event_shall_hygieia_or_its_suppliers_be_liable_for_any_damages_arising_out_of_the_use_or_inability_to_use_hygieia_even_if_hygieia_or_a_hygieia_authorized_representative_has_been_notified_orally_or_in_writing_of_the_possibility_of_such_damage">\n7. Limitations: In no event shall Hygieia or its suppliers be liable for any damages arising out of the use or inability to use Hygieia, even if Hygieia or a Hygieia authorized representative has been notified orally or in writing of the possibility of such damage.</string>
    <string name="your_privacy_is_important_to_us_this_privacy_policy_outlines_the_types_of_personal_information_that_hygieia_collects_and_how_we_use_it">Your privacy is important to us. This Privacy Policy outlines the types of personal information that Hygieia collects and how we use it:</string>
    <string name="n3_data_security_hygieia_takes_reasonable_precautions_to_protect_your_personal_information_from_unauthorized_access_use_or_disclosure_however_no_method_of_transmission_over_the_internet_or_electronic_storage_is_100_secure">\n3. Data Security: Hygieia takes reasonable precautions to protect your personal information from unauthorized access, use, or disclosure. However, no method of transmission over the internet or electronic storage is 100% secure.</string>
    <string name="n2_use_of_information_the_information_we_collect_is_used_to_operate_and_improve_hygieia_and_to_personalize_your_experience_we_may_also_use_your_information_to_communicate_with_you_such_as_to_send_you_updates_or_respond_to_inquiries">\n2. Use of Information: The information we collect is used to operate and improve Hygieia and to personalize your experience. We may also use your information to communicate with you, such as to send you updates or respond to inquiries.</string>
    <string name="n1_information_collection_hygieia_collects_personal_information_such_as_your_name_and_email_address_when_you_register_for_an_account_we_may_also_collect_non_personal_information_such_as_your_device_type_and_ip_address">\n1. Information Collection: Hygieia collects personal information, such as your name and email address, when you register for an account. We may also collect non-personal information, such as your device type and IP address.</string>
    <string name="by_using_hygieia_you_consent_to_the_terms_of_this_privacy_policy">\nBy using Hygieia, you consent to the terms of this Privacy Policy.</string>
    <string name="n5_contact_us_if_you_have_any_questions_or_concerns_about_this_privacy_policy_please_contact_us_at_hygieia_gmail_com">\n5. Contact Us: If you have any questions or concerns about this Privacy Policy, please contact us at hygieiaweb.com</string>
    <string name="n4_changes_to_privacy_policy_hygieia_reserves_the_right_to_update_or_change_this_privacy_policy_at_any_time_any_changes_will_be_effective_immediately_upon_posting_the_updated_privacy_policy_on_the_hygieia_application">\n4. Changes to Privacy Policy: Hygieia reserves the right to update or change this Privacy Policy at any time. Any changes will be effective immediately upon posting the updated Privacy Policy on the Hygieia application.</string>
    <string name="select_the_lgu_unit_nearest_to_your_location">Select the LGU unit nearest to your location</string>
    <string-array name="valid_ids_array">
        <item>Select ID</item>
        <item>National ID</item>
        <item>Driver\'s License</item>
        <item>Passport ID</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dashboard">Dashboard</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="rewards">Rewards</string>
    <string name="promos">Promos</string>
    <string name="shop_email_gmail_com">shop_email@gmail.com</string>
    <string name="cancel">Cancel</string>
    <string name="no_of_recyclables">No.of recyclables</string>
    <string name="requests">Requests</string>
</resources>