<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/home"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/history"
            android:title="@string/transactions" />
        <item
            android:id="@+id/nav_scan_qr_code"
            android:icon="@drawable/qr_code"
            android:title="@string/scan_qr_code" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/discount"
            android:title="@string/rewards" />
        <item
            android:id="@+id/nav_promos"
            android:icon="@drawable/reward"
            android:title="@string/promos" />
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/baseline_calendar_month_24"
            android:title="@string/requests" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/person"
            android:title="@string/profile" />
    </group>
</menu>