<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.signup.SignUpFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/large"
            android:paddingBottom="@dimen/large"
            android:paddingHorizontal="@dimen/regular">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_an_account"
                android:textSize="@dimen/text_regular" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/storeNameLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="25dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/main_green"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/storeNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/store"
                    android:drawablePadding="7dp"
                    android:hint="@string/store_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/storeEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/tiniest"
                app:endIconMode="clear_text"
                app:endIconTint="@color/main_green"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/storeEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="7dp"
                    android:hint="@string/email" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/storeOwnerLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/tiniest"
                app:endIconMode="clear_text"
                app:endIconTint="@color/main_green"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/storeOwnerEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/person"
                    android:drawablePadding="7dp"
                    android:hint="@string/owner" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/storeSitioLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/tiniest"
                app:endIconMode="clear_text"
                app:endIconTint="@color/main_green"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/storeSitioEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/location"
                    android:drawablePadding="7dp"
                    android:hint="@string/sitio" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/storeBrgyLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/tiniest"
                app:endIconMode="clear_text"
                app:endIconTint="@color/main_green"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/storeBrgyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/location"
                    android:drawablePadding="7dp"
                    android:hint="@string/barangay" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/storeCityLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/tiniest"
                app:endIconMode="clear_text"
                app:endIconTint="@color/main_green"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/storeCityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/location"
                    android:drawablePadding="7dp"
                    android:hint="@string/city" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/storeProvinceLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/tiniest"
                app:endIconMode="clear_text"
                app:endIconTint="@color/main_green"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/storeProvinceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/location"
                    android:drawablePadding="7dp"
                    android:hint="@string/province" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/selectedImg"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/no_image_selected" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/uploadValidId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/tiny"
                    android:background="@color/secondary_green"
                    android:padding="@dimen/small"
                    android:text="@string/upload_valid_id"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="@dimen/XL"
                android:layout_marginTop="@dimen/large"
                android:background="@drawable/buttons">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/white"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large"
                android:gravity="center"
                android:textSize="@dimen/text_small"
                android:layout_marginBottom="@dimen/small"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/toLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textSize="@dimen/text_small"
                android:textColor="@color/accent_orange" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>