<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:padding="@dimen/large"
    tools:context=".pages.scanQR.screens.GrantPointsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tiniest"
        android:text="Transaction Details"
        android:fontFamily="@font/nunito_sans_semibold"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/customerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tiniest"
        android:textSize="13sp" />


    <TextView
        android:id="@+id/customerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tiniest"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/currentBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tiniest"
        android:textSize="13sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quantityCont"
        android:layout_marginTop="@dimen/regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/no_of_recyclables"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/regular"
        android:layout_marginBottom="@dimen/large">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitForm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/small"
            android:background="@drawable/primary_button"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/danger_button"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/submitForm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>